Fix spacing for lmeta

--- a/contents/style/site.less
+++ b/contents/style/site.less
@@ -43,10 +43,11 @@ body {
     &.tags, tags {
       ul { 
         display: inline;
-        margin-left: 1/2em;
+        margin-left: 0px;
       }
       li { 
         display: inline;
+        line-height: inherit;
 
         &:after { content: ", "; }
         &:last-child:after {
